QE-183 Fix minor z-index issue

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/drawer/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/drawer/style.scss
@@ -14,6 +14,7 @@
 		inset: 0;
 		padding: 0;
 		background-color: rgba(0, 0, 0, 0.5);
+		z-index: 99;
 	}
 
 	&--open {
